--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -17,7 +17,7 @@ jobs:
       
     - name: Install C++ Compiler
       run: sudo apt-get install g++
-    - name: Compile main.cpp
+    - name: Install tool
       run: |
         if ! bash install.sh testName; then
           echo "Compilation failed"
@@ -26,11 +26,13 @@ jobs:
         
     - name: Test for PG2
       run: |
-        mkdir pg2
-        mkdir pg2/u32
+        mkdir pg2 
+        mkdir pg2/u32 
         mkdir pg2/u32/a4
         cd pg2/u32/a4
-        touch exampleFile.txt
+        touch exampleFile.txt 
+        touch testFlagsfile.txt
+        
         if ! testName exampleFile.txt; then
            echo "Error while calling naming tool on PG2"
            exit 1
@@ -39,15 +41,28 @@ jobs:
            echo "Error: wrong file name for PG2"
            exit 1
         fi
+        
+        if ! testName testFlagsfile.txt -a TEST; then
+           echo "Error while calling naming tool with flag option on PG2"
+           exit 1
+        fi
+        if ! mv PG2-1-14_U32_4_TEST.txt testFlagsfile.txt; then
+           echo "Error: wrong file name for PG2 with flag option"
+           exit 1
+        fi
+        
         cd ../../..
+        sudo rm -rf pg2
         
     - name: Test for DS
       run: |
         mkdir ds
-        mkdir ds/u03
+        mkdir ds/u03 
         mkdir ds/u03/a9
         cd ds/u03/a9
         touch exampleFile.txt 
+        touch testFlagsfile.txt 
+        
         if ! testName exampleFile.txt; then
            echo "Error while calling naming tool on DS"
            exit 1
@@ -56,3 +71,15 @@ jobs:
            echo "Error: wrong file name for DS"
            exit 1
         fi
+        
+        if ! testName testFlagsfile.txt -a TEST; then
+           echo "Error while calling naming tool with flag option on DS"
+           exit 1
+        fi
+        if ! mv DS-3-14_U03_9_TEST.txt testFlagsfile.txt; then
+           echo "Error: wrong file name for DS with flag option"
+           exit 1
+        fi
+        
+        cd ../../..
+        sudo rm -rf ds
