--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -32,7 +32,7 @@ jobs:
         cd pg2/u32/a4
         touch exampleFile.txt 
         touch testFlagsfile.txt
-        touch test-FFlagsfile.txt
+        touch testFFlagsfile.txt
         
         if ! testName exampleFile.txt; then
            echo "Error while calling naming tool on PG2"
@@ -52,7 +52,7 @@ jobs:
            exit 1
         fi
         
-        if ! testName test-FFlagsfile.pdf -f; then
+        if ! testName testFFlagsfile.pdf -f; then
            echo "Error while calling naming tool with flag option -f on PG2"
            exit 1
         fi
@@ -72,7 +72,7 @@ jobs:
         cd ds/u03/a9
         touch exampleFile.txt 
         touch testFlagsfile.txt 
-        touch test-FFlagsfile.txt
+        touch testFFlagsfile.txt
 
         
         if ! testName exampleFile.txt; then
@@ -93,11 +93,11 @@ jobs:
            exit 1
         fi
         
-        if ! testName test-FFlagsfile.pdf -f; then
+        if ! testName testFFlagsfile.pdf -f; then
            echo "Error while calling naming tool with flag option on DS"
            exit 1
         fi
-        if ! mv DS-3-14_U03_9.pdf test-FFlagsfile.pdf; then
+        if ! mv DS-3-14_U03_9.pdf testFFlagsfile.pdf; then
            echo "Error: wrong file name for DS with flag option"
            exit 1
         fi
